# color-bypass-bench

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  hpc_control_rerun_v2.yaml  hpc_cuda.yaml  hpc_cuda_rerun.yaml  hpc_followup_bigger_models.yaml  hpc_followup_bigger_models_v2.yaml  hpc_followup_more_models.yaml  hpc_followup_more_models_v2.yaml  paper_run.yaml  run_now.yaml  run_tiny.yaml  run_tiny_1turn.yaml
results/: 46977787_prewarm.err
results/color_bypass_control_v2_20260221_124849/: config_snapshot.yaml  env.json  ollama_models.txt  shard_manifest.csv  submit_array.sh
results/color_bypass_cuda_20260220_124232/: config_snapshot.yaml  env.json  ollama_models.txt  shard_manifest.csv  submit_array.sh
results/color_bypass_cuda_rerun_20260221_123911/: config_snapshot.yaml  env.json  shard_manifest.csv  submit_array.sh
results/color_bypass_followup_big_20260221_123927/: config_snapshot.yaml  env.json  shard_manifest.csv  submit_array.sh
results/color_bypass_followup_big_v2_20260221_124849/: config_snapshot.yaml  env.json  shard_manifest.csv  submit_array.sh
results/color_bypass_followup_more_20260221_123919/: config_snapshot.yaml  env.json  shard_manifest.csv  submit_array.sh
results/color_bypass_followup_more_v2_20260221_124849/: config_snapshot.yaml  env.json  shard_manifest.csv  submit_array.sh
scripts/: hpc_aggregate.py  hpc_run.py  make_hpc_overview_assets.py  make_report_assets.py  run_sweep.py  summarize.py
src/ollama_color_bypass_bench/: __init__.py  analysis.py  config.py  episode.py  logging_io.py  ollama_client.py  parsing.py  (+3 more)
(+1436 files in other folders)
